--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,21 @@
+# 智谱AI API配置 - 开发环境
+
+# 智谱AI官方API密钥（必需）
+ZHIPU_API_KEY=
+
+# 备用API密钥（可选）
+API_KEY=
+
 # 开发环境配置
-# 本地开发环境域名
 REACT_APP_BASE_URL=http://localhost:3001
+REACT_APP_API_BASE_URL=http://localhost:3001/api
+REACT_APP_ENV=development
+
+# 应用环境变量
+NODE_ENV=development
+VITE_APP_TITLE=SmartGuide AI - Dev
+VITE_APP_VERSION=1.0.0-dev
 
 # API配置
-REACT_APP_API_BASE_URL=http://localhost:3001/api
-
-# 其他开发环境配置
-REACT_APP_ENV=development
+VITE_API_BASE_URL=http://localhost:3001
+VITE_ZHIPU_BASE_URL=https://open.bigmodel.cn/api/paas/v4
