--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,21 @@
+# 智谱AI API配置 - 生产环境
+
+# 智谱AI官方API密钥（必需）
+ZHIPU_API_KEY=
+
+# 备用API密钥（可选）
+API_KEY=
+
 # 生产环境配置
-# 生产环境域名
 REACT_APP_BASE_URL=https://sora.wboke.com
+REACT_APP_API_BASE_URL=https://sora.wboke.com/api
+REACT_APP_ENV=production
+
+# 应用环境变量
+NODE_ENV=production
+VITE_APP_TITLE=SmartGuide AI
+VITE_APP_VERSION=1.0.0
 
 # API配置
-REACT_APP_API_BASE_URL=https://sora.wboke.com/api
-
-# 其他生产环境配置
-REACT_APP_ENV=production
+VITE_API_BASE_URL=https://sora.wboke.com
+VITE_ZHIPU_BASE_URL=https://open.bigmodel.cn/api/paas/v4
