修复Vercel API路由404错误
- 添加@vercel/node构建配置用于API函数
- 修复Node.js版本兼容性（18.x）
- 恢复functions配置确保API正确部署
- 完善API路由映射和超时设置

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
       "config": {
         "distDir": "dist"
       }
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -36,5 +40,13 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/zhipu/[...endpoint].js": {
+      "maxDuration": 60
+    },
+    "api/ocr.js": {
+      "maxDuration": 30
+    }
+  }
 }
