--- a/.env.vercel
+++ b/.env.vercel
@@ -1,19 +1,42 @@
-# Vercel环境变量配置文件
-# 可以直接在Vercel Dashboard中导入此文件
+# ===========================================
+# Vercel 环境变量配置文件
+# ===========================================
+# 注意: 此文件用于参考，请勿包含真实API密钥
+# 在 Vercel Dashboard 中设置真实的环境变量
 
-# 智谱AI API密钥（必需）
-ZHIPU_API_KEY=a75d46768b0f45dc90a5969077ffc8d9.dT0t2tku3hZGfYkk
+# ===========================================
+# 🔑 API 密钥配置 (必需)
+# ===========================================
 
-# 备用API密钥（可选）
-API_KEY=a75d46768b0f45dc90a5969077ffc8d9.dT0t2tku3hZGfYkk
+# 智谱AI API密钥 - 在Vercel Dashboard中设置真实值
+ZHIPU_API_KEY=your_zhipu_api_key_here
 
-# 应用环境配置
+# 备用API密钥 - 与ZHIPU_API_KEY保持一致
+API_KEY=your_zhipu_api_key_here
+
+# ===========================================
+# 🌐 应用环境配置
+# ===========================================
+
+# React 应用环境
 REACT_APP_ENV=production
+
+# Node.js 环境
 NODE_ENV=production
 
-# 应用信息
+# ===========================================
+# 📱 应用信息配置
+# ===========================================
+
+# 应用标题
 VITE_APP_TITLE=SmartGuide AI
+
+# 应用版本
 VITE_APP_VERSION=1.0.0
 
-# API配置
+# ===========================================
+# 🔗 API 服务配置
+# ===========================================
+
+# 智谱AI API基础URL
 VITE_ZHIPU_BASE_URL=https://open.bigmodel.cn/api/paas/v4
