feat: 添加Supabase向量知识库存储和知识库服务层
- 添加 api/knowledge.ts: Supabase向量存储API（不包含密钥）
- 添加 services/configService.ts: 安全配置管理服务
- 添加 services/knowledgeService.ts: 知识库服务层
- 更新 vercel.json: 添加知识库API路由

注意：环境变量需要在Vercel控制台手动配置

--- a/vercel.json
+++ b/vercel.json
@@ -23,10 +23,14 @@
       }
     }
   ],
-  "routes": [
+"routes": [
     {
       "src": "/api/chat",
       "dest": "/api/chat.ts"
+    },
+    {
+      "src": "/api/knowledge",
+      "dest": "/api/knowledge.ts"
     },
     {
       "src": "/api/project/(.*)",
