fix: rename knowledge.ts to .mjs for ES module support

--- a/vercel.json
+++ b/vercel.json
@@ -30,7 +30,7 @@
     },
     {
       "src": "/api/knowledge",
-      "dest": "/api/knowledge.ts"
+      "dest": "/api/knowledge.mjs"
     },
     {
       "src": "/api/project/(.*)",
