--- a/package.json
+++ b/package.json
@@ -17,14 +17,22 @@
     "optimize:enable-io": "cross-env IO_OPTIMIZATION=true npm run optimize:init",
     "optimize:enable-full": "cross-env FULL_OPTIMIZATION=true npm run optimize:init",
     "optimize:disable": "node -e \"import('./src/optimization-main.js').then(m => m.emergencyDisable())\"",
-    "optimize:status": "node -e \"import('./src/optimization-main.js').then(m => m.initializeOptimizer().then(opt => console.log(JSON.stringify(opt.getStatus(), null, 2))))\""
+    "optimize:status": "node -e \"import('./src/optimization-main.js').then(m => m.initializeOptimizer().then(opt => console.log(JSON.stringify(opt.getStatus(), null, 2))))\"",
+    "lint": "eslint src --ext .ts,.tsx --max-warnings 10",
+    "format": "prettier --write src/**/*.{ts,tsx,json,css}",
+    "format:check": "prettier --check src/**/*.{ts,tsx,json,css}"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.94.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/d3": "^7.4.3",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.23",
     "cross-env": "^7.0.3",
+    "d3": "^7.9.0",
     "dotenv": "^16.6.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.6",
     "express": "^5.2.1",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.6",
@@ -32,7 +40,9 @@
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "uuid": "^13.0.0",
+    "zhipuai": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
